# mini-codeindex

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docker/chromadb/: docker-compose.yml
src/mini_code_index/: __init__.py  chunking.py  cli.py  db.py  embedding.py  indexing.py  logging_utils.py  query.py  retrieval_defs.py  retrieval_graph.py  vectorise.py
src/utils/: interface.py  llm_factory.py  llm_tooling.py  llm_utils.py
tests/: test_auto_ast_mode_prints.py  test_chromadb_connection.py  test_chromadb_roundtrip.py  test_chunking_matrix_prints.py  test_db_collection_name.py  test_embedding_integration.py  test_indexing_smoke.py  test_java_long_files_prints.py  test_js_function_mode_prints.py  test_langgraph_rewrite_graph.py  test_local_search_tools.py  test_python_long_files_prints.py  test_retrieval_agent_graph.py  test_scope_fallback_non_python_java.py  test_step1_chunk_path.py  test_tool_arg_coercion.py  test_vector_search_tool.py
tests/example_results/: batch_retrieval_q1.md  batch_retrieval_q2.md  batch_retrieval_q3.md  batch_retrieval_q4.md  batch_retrieval_q5.md  batch_retrieval_results.md  captured_chunks.txt  subtask_analyze_architectural_entry_points.md  subtask_analyze_data_access_patterns.md  subtask_analyze_dependency_manifests.md  subtask_analyze_entry_points.md  subtask_analyze_project_documentation.md  subtask_boundary_check_security_and_auth.md  subtask_define_class_relationships.md  subtask_examine_project_structure.md  subtask_identify_behavioral_patterns_in_logic.md  subtask_identify_core_internal_modules.md  (+16 more)
(+38 files in other folders)
